--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Утилитарные стили */
+html {
+    box-sizing: border-box;
+}
 
 body {
     /* font-family: "DM Serif Display", serif; */
@@ -22,12 +25,23 @@ body {
     padding-right: 15px;
 }
 
-.title-2 {
+.page {
+    padding-top: 178px;
+    padding-bottom: 178px;
+}
+
+.title-2,
+.title-3 {
     font-family: "DM Serif Display", serif;
     font-size: 50px;
     line-height: 1.25;
     letter-spacing: 0.02em;
     margin: 0;
+    font-weight: 400;
+}
+
+.title-3 {
+    font-size: 25px;
 }
 
 .btn {
@@ -259,6 +273,7 @@ body {
 .hero__title {
     font-size: 85px;
     font-family: "DM Serif Display", serif;
+    font-weight: 400;
     line-height: 1.25;
     margin: 0;
     max-width: 560px;
@@ -266,6 +281,7 @@ body {
 
 .hero__text {
     max-width: 560px;
+    margin: 0;
 }
 
 .about {
@@ -335,4 +351,231 @@ body {
     max-height: 700px;
     border-radius: 0 35vh 0 15vh;
     overflow: hidden;
+}
+
+.swiper {}
+
+.feedback-swiper {
+    transition: .3s;
+}
+
+.swiper-wrapper {}
+
+.feedback-swiper__slide {
+    padding-top: 88px;
+    padding-bottom: 183px;
+    background-color: #F4F0EC;
+    border-radius: 70px;
+}
+
+.feedback-swiper__title {
+    max-width: 650px;
+    margin: 0 auto 90px;
+}
+
+.feedback-swiper__inner {
+    max-width: 750px;
+    margin: 0 auto;
+}
+
+.feedback-swiper__text {
+    font-family: "DM Serif Display", serif;
+    font-style: italic;
+    font-size: 35px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    text-align: center;
+    padding-top: 50px;
+    margin-top: 0;
+    margin-bottom: 35px;
+    position: relative;
+}
+
+.feedback-swiper__text::before {
+    content: '';
+    display: block;
+    width: 31px;
+    height: 24px;
+    background-image: url(/img/quotes.svg);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+
+.feedback-swiper__author {
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0;
+}
+
+.feedback-swiper__prev,
+.feedback-swiper__next {
+    width: 52px;
+    height: 52px;
+    background-color: #fff;
+    border-radius: 50%;
+}
+
+.feedback-swiper__prev::after,
+.feedback-swiper__next::after {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 16px;
+    background-image: url(/img/feedback-arrow.svg);
+}
+
+.feedback-swiper__next::after {
+    transform: rotate(180deg);
+}
+
+
+.clients__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.numbers {
+    padding-top: 151px;
+    padding-bottom: 151px;
+    background-color: #F4F0EC;
+}
+
+
+.numbers__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.numbers__item {
+    flex-basis: 25%;
+    text-align: center;
+    position: relative;
+}
+
+.numbers__item::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 1px;
+    height: 130px;
+    background-color: #cda274;
+    right: 0;
+    top: calc(50% - 65px);
+}
+
+.numbers__item:last-child:after {
+    display: none;
+}
+
+.numbers__item span {
+    display: block;
+    font-family: "DM Serif Display", serif;
+    font-size: 85px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    color: #cda274;
+    margin-bottom: 16px;
+}
+
+.numbers__item p {
+    margin: 0;
+}
+
+.article {}
+
+
+.article__list {
+    display: flex;
+    align-items: center;
+    column-gap: 27px;
+    padding-left: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.article__item {
+    flex-basis: 33%;
+    padding: 21px 21px 38px 21px;
+    border: 1px solid #e7e7e7;
+    border-radius: 62px;
+    box-shadow: 0 10px 30px 0 rgba(255, 255, 255, 0.25);
+}
+
+.article__item:nth-child(even) {
+    background-color: #f4f0ec;
+}
+
+.article__item-thumb {
+    overflow: hidden;
+    border-radius: 45px 45px 0 0;
+    position: relative;
+    margin-bottom: 21px;
+}
+
+.article__item-thumb img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.article__item-tag {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    display: inline-block;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    text-transform: capitalize;
+    color: #4d5053;
+    padding: 4px 9px 8px 11px;
+    border-radius: 8px 8px 8px 0;
+    background-color: #fff;
+
+}
+
+.article__item-title {
+    margin-bottom: 30px;
+}
+
+.article__item-inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.article__date {
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    text-transform: capitalize;
+    color: #4d5053;
+}
+
+.article__link {
+    display: block;
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    background-color: #f4f0ec;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.article__item:nth-child(even) .article__link {
+    background-color: #fff;
+}
+
+.article__link svg {
+    stroke: #292F36;
 }
