--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@ html {
     box-sizing: border-box;
 }
 
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
     /* font-family: "DM Serif Display", serif; */
     font-family: "Jost", sans-serif;
@@ -57,6 +63,7 @@ body {
     border-radius: 18px;
     padding: 26px 56px 26px 31px;
     position: relative;
+    cursor: pointer;
 }
 
 .btn::after {
@@ -492,27 +499,25 @@ body {
     margin: 0;
 }
 
-.article {}
-
-
 .article__list {
-    display: flex;
-    align-items: center;
-    column-gap: 27px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 27px;
     padding-left: 0;
     margin: 0;
     list-style-type: none;
 }
 
-.article__item {
-    flex-basis: 33%;
+.article__item,
+.article-last__wrapper {
     padding: 21px 21px 38px 21px;
     border: 1px solid #e7e7e7;
     border-radius: 62px;
     box-shadow: 0 10px 30px 0 rgba(255, 255, 255, 0.25);
 }
 
-.article__item:nth-child(even) {
+.article__item:hover,
+.article-last__wrapper:hover {
     background-color: #f4f0ec;
 }
 
@@ -554,14 +559,16 @@ body {
     justify-content: space-between;
 }
 
-.article__date {
+.article__date,
+.article-last__date {
     font-size: 16px;
     letter-spacing: 0.01em;
     text-transform: capitalize;
     color: #4d5053;
 }
 
-.article__link {
+.article__link,
+.article-last__link {
     display: block;
     width: 52px;
     height: 52px;
@@ -572,10 +579,299 @@ body {
     justify-content: center;
 }
 
-.article__item:nth-child(even) .article__link {
+.article__item:hover .article__link,
+.article-last:hover .article-last__link {
     background-color: #fff;
 }
 
-.article__link svg {
+.article__link svg,
+.article-last__link svg {
     stroke: #292F36;
+}
+
+.subscribe .container {
+    background: #292f36;
+    border-radius: 70px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.subscribe__inner {
+    max-width: 600px;
+    margin: 0 auto;
+    color: #fff;
+    text-align: center;
+}
+
+.subscribe__title {
+    margin-bottom: 11px;
+}
+
+.subscribe__text {
+    margin-bottom: 32px;
+    margin-top: 0;
+}
+
+.subscribe__form {
+    max-width: 400px;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+}
+
+.subscribe__form input,
+.subscribe__form button {
+    border: none;
+    height: 75px;
+}
+
+.subscribe__form input {
+    flex-basis: calc(100% - 136px);
+    outline: none;
+    padding: 0;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.11;
+    padding-left: 20px;
+    padding-right: 10px;
+
+    border-radius: 18px 0 0 18px;
+}
+
+.subscribe__form input::placeholder {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.11;
+    color: #98a2b3;
+}
+
+.subscribe__form button {
+    background-color: #CDA274;
+    border: 1px solid #CDA274;
+    flex-basis: 136px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 1.11;
+    padding: 0;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 0 18px 18px 0;
+    transition: .3s;
+}
+
+.subscribe__form button:hover {
+    color: #CDA274;
+    background-color: #fff;
+}
+
+.contact-us {
+    padding-top: 200px;
+    padding-bottom: 155px;
+}
+
+.contact-us__title {
+    max-width: 650px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 77px;
+}
+
+.contact-us__form {
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 57px 40px;
+}
+
+.contact-us__form input,
+.contact-us__form textarea {
+    border: none;
+    border-bottom: 1px solid #000;
+    outline: none;
+}
+
+.contact-us__form input,
+.contact-us__form textarea,
+.contact-us__form input::placeholder,
+.contact-us__form textarea::placeholder {
+    font-family: "Jost", sans-serif;
+    font-size: 22px;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+    color: #4d5053;
+}
+
+.contact-us__form input,
+.contact-us__form textarea {
+    color: #000;
+}
+
+.contact-us__form input {
+    height: 45px;
+}
+
+.contact-us__form textarea {
+    height: 175px;
+    resize: none;
+}
+
+.contact-us__form textarea,
+.contact-us__btn {
+    grid-column: 1/3;
+}
+
+.contact-us__btn {
+    margin: 0 auto;
+}
+
+.thumb {
+    position: relative;
+    width: 100%;
+    height: 356px;
+}
+
+.thumb__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    z-index: -1;
+}
+
+.thumb__info {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    max-width: 510px;
+    padding-top: 41px;
+    padding-bottom: 41px;
+    background-color: #fff;
+    text-align: center;
+    border-radius: 37px 37px 0 0;
+}
+
+.thumb__title {
+    margin: 0;
+}
+
+.breadcrums {
+    margin: 0;
+    list-style-type: none;
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    column-gap: 26px;
+}
+
+.breadcrums>li {
+    position: relative;
+}
+
+.breadcrums>li::after {
+    display: block;
+    content: '/';
+    position: absolute;
+    top: 0;
+    right: -18px;
+}
+
+.breadcrums>li:last-child::after {
+    display: none;
+}
+
+.breadcrums a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.article-last {}
+
+.artilce-last__title {}
+
+.article-last__wrapper {
+    padding: 22px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4vw;
+}
+
+.article-last__thumb {
+    width: 100%;
+    height: 478px;
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+.article-last__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.article-last__title {
+    margin-bottom: 22px;
+}
+
+.article-last__text {
+    margin: 0;
+    margin-bottom: 1em;
+}
+
+.article-last__title,
+.article-last__text {
+    max-width: 460px;
+}
+
+.article-last__text:last-of-type {
+    margin-bottom: 41px;
+}
+
+.article-last__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+    margin-top: 51px;
+}
+
+.pagination>* {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    width: 52px;
+    height: 52px;
+    border: 1px solid #CDA274;
+    border-radius: 50%;
+    text-decoration: none;
+    color: inherit;
+    transition: .3s;
+    position: relative;
+}
+
+.pagination>span {
+    pointer-events: none;
+}
+
+.pagination>a:hover {
+    background-color: #CDA274;
+    color: #fff;
+}
+
+.pagination-next {
+    position: absolute;
+
 }
