--- a/css/style.css
+++ b/css/style.css
@@ -954,10 +954,157 @@ body {
     background-image: url(/img/widget-search-icon.svg);
 }
 
-.widget-latest {}
+/* Виджет последних записей */
 
-.widget-category {}
+.widget-latest>.widget__title {
+    margin-bottom: 33px;
+}
 
-.widget-tags {}
+.widget-latest__list,
+.widget-category__list,
+.widget-tags__list {
+    padding-left: 0;
+    margin: 0;
+    list-style-type: none;
+}
 
-.widget__title {}
+.widget-latest__item {
+    padding-bottom: 6px;
+    border-bottom: 1px solid #cda274;
+    margin-bottom: 34px;
+}
+
+.widget-latest__item:last-child {
+    margin-bottom: 0;
+}
+
+.widget-latest__title {
+    display: block;
+    margin-bottom: 5px;
+    text-decoration: none;
+    color: inherit;
+
+    max-width: 200px;
+
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    transition: .3s;
+}
+
+.widget-latest__title:hover,
+.widget-category__title:hover {
+    color: #cda274;
+}
+
+.widget-latest__date {
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #4d5053;
+    display: block;
+    text-align: right;
+}
+
+/* Виджет категорий */
+
+.widget-category {
+    padding: 27px 33px;
+    background-color: #f4f0ec;
+    border-radius: 20px;
+}
+
+.widget-category>.widget__title {
+    margin-bottom: 10px;
+}
+
+
+.widget-category__item {
+    border-bottom: 1px solid #cda274;
+}
+
+.widget-category__item:last-child {
+    border-bottom: none;
+}
+
+.widget-category__title {
+    text-decoration: none;
+    display: block;
+    color: inherit;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    color: #4d5053;
+    transition: .3s;
+}
+
+.widget {}
+
+.widget-tags>.widget__title {
+    margin-bottom: 24px;
+}
+
+.widget-tags__list {
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 11px 10px;
+}
+
+.widget-tags__item {
+    padding: 9px 30px;
+    background-color: #f4f0ec;
+    border-radius: 10px;
+    transition: .3s;
+}
+
+.widget-tags__item:hover {
+    background-color: #292f36;
+    border-radius: 10px;
+    color: #fff;
+}
+
+.widget-tags__link {
+    /* font-weight: 400; */
+    font-size: 18px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Блок с автором */
+.author {
+    padding-top: 50px;
+    border-top: 1px solid #e5e5e5;
+}
+
+.author__head {
+    display: flex;
+    column-gap: 32px;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.author__thumb {
+    flex-basis: 70px;
+    height: 70px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+
+.author__info {}
+
+.author__name {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.2;
+    margin: 0;
+    /* letter-spacing: 0.01em; */
+    /* color: #292f36; */
+}
+
+.author__role {}
