--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,7 @@ body {
 .widget-search__input {
     width: 100%;
     padding: 33px;
-    border: none;
+    border: 1px solid transparent;
     border-radius: 20px;
     font-size: 22px;
     line-height: 1.5;
@@ -938,6 +938,11 @@ body {
     line-height: 1.5;
     letter-spacing: 0.01em;
     color: #cda274;
+}
+
+.widget-search__input:focus {
+    background-color: #fff;
+    border: 1px solid #cda274;
 }
 
 .widget-search__btn {
@@ -1103,8 +1108,8 @@ body {
     font-size: 30px;
     line-height: 1.2;
     margin: 0;
-    /* letter-spacing: 0.01em; */
-    /* color: #292f36; */
 }
 
-.author__role {}
+.author__text {
+    color: #4d5053;
+}
