--- a/css/style.css
+++ b/css/style.css
@@ -1113,3 +1113,50 @@ body {
 .author__text {
     color: #4d5053;
 }
+
+/* Стили для поста блога */
+
+.post h1,
+.post h2,
+.post h3,
+.post h4,
+.post h5,
+.post h6 {
+    font-family: "DM Serif Display", serif;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 1.25;
+    letter-spacing: 0.02em;
+    margin-top: 0.8em;
+    margin-bottom: 0.8em;
+}
+
+.post h2 {
+    font-size: 46px;
+}
+
+.post h3 {
+    font-size: 42px;
+}
+
+.post h4 {
+    font-size: 38px;
+}
+
+.post h5 {
+    font-size: 34px;
+}
+
+.post h6 {
+    font-size: 30px;
+}
+
+.post p {
+    text-align: justify
+}
+
+.post ul,
+.post ol {
+    list-style-type: none;
+    padding-left: 0;
+}
