--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ html {
     box-sizing: inherit;
 }
 
+.none {
+    display: none !important;
+}
+
 body {
     /* font-family: "DM Serif Display", serif; */
     font-family: "Jost", sans-serif;
@@ -49,6 +53,7 @@ body {
     line-height: 1.25;
     letter-spacing: 0.02em;
     margin: 0;
+    text-align: center;
     font-weight: 400;
 }
 
@@ -345,7 +350,6 @@ body {
     text-decoration: none;
     color: inherit;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     column-gap: 15px;
 }
@@ -462,6 +466,10 @@ body {
     list-style-type: none;
     padding-left: 0;
     margin: 0;
+}
+
+.clients__item {
+    display: block;
 }
 
 .numbers {
@@ -1597,6 +1605,7 @@ body {
     color: #cda274;
     margin: 0;
     max-width: 569px;
+    margin-bottom: -30px;
 }
 
 .error__text {
@@ -1635,4 +1644,112 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
     object-fit: cover;
+}
+
+/* Media */
+
+@media (max-width: 1230px) {
+
+    body {
+        font-size: 18px;
+    }
+
+    .container {
+        width: 930px;
+    }
+
+    .title-2 {
+        font-size: 40px;
+    }
+
+    .error {
+        padding-top: 80px;
+        padding-bottom: 150px;
+    }
+
+    .error__title {
+        font-size: 200px;
+        max-width: 400px;
+    }
+
+    .error__text {
+        font-size: 30px;
+        max-width: 400px;
+    }
+
+    .footer__inner {
+        display: grid;
+        grid-template-columns: 1fr 170px;
+        grid-template-rows: repeat(2, auto);
+        column-gap: 50px;
+    }
+
+    .footer__address {
+        grid-row: 1/3;
+    }
+
+    .footer__mail,
+    .footer__tel {
+        text-align: right;
+    }
+
+    .hero {
+        height: calc(100vh - 151px);
+    }
+
+    .hero__title {
+        font-size: 70px;
+        max-width: 500px;
+        padding-left: 40px;
+    }
+
+    .hero__text {
+        max-width: 500px;
+        padding-left: 40px;
+    }
+
+    .about {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .about>.container {
+        column-gap: 5%;
+    }
+
+    .about__img {
+        flex-basis: 50%;
+    }
+
+    .about__info {
+        flex-basis: 45%;
+    }
+
+    .about__phone-img {
+        flex-basis: 80px;
+    }
+
+    .about__info>p:last-of-type,
+    .about__phone {
+        margin-bottom: 30px;
+    }
+
+    .feedback-swiper__title {
+        margin-bottom: 50px;
+    }
+
+    .feedback-swiper__slide {
+        padding-top: 65px;
+        padding-bottom: 125px;
+    }
+
+    .feedback-swiper__text {
+        font-size: 28px;
+        padding-top: 40px;
+        margin-bottom: 25px;
+    }
+
+    .clients__list {
+        flex-wrap: wrap;
+    }
 }
