--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* Утилитарные стили */
+
+
 html {
     box-sizing: border-box;
 }
@@ -102,27 +104,38 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     padding-top: 43px;
     padding-bottom: 45px;
 }
 
-.header__nav {
+.header__menu {
+    display: none;
+}
+
+.header>nav {
+    margin-left: auto;
+}
+
+.logo {
+    font-size: 0;
+}
+
+.header__nav,
+.modal-menu__nav {
     display: flex;
-    justify-content: space-between;
     list-style-type: none;
     padding-left: 0;
 }
 
-.header__item {
+.header__item+.header__item {
     margin-left: 48px;
 }
 
-.header__item:last-child {
+.header__search {
     margin-left: 30px;
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
 }
 
 .header__link {
@@ -186,6 +199,7 @@ body {
 
 .overlay {
     position: fixed;
+    z-index: 999;
     top: -100vh;
     right: 0;
     left: 0;
@@ -194,7 +208,8 @@ body {
     transition: .3s;
 }
 
-.modal-search {
+.modal-search,
+.modal-menu {
     background-color: #fff;
     padding-top: 47px;
     padding-bottom: 47px;
@@ -252,7 +267,8 @@ body {
     stroke: #fff;
 }
 
-.form-search__close {
+.form-search__close,
+.modal-menu__close {
     border: none;
     background-color: transparent;
     padding: 0;
@@ -264,13 +280,44 @@ body {
     cursor: pointer;
 }
 
-.form-search__close svg {
+.form-search__close svg,
+.modal-menu__close svg {
     fill: #292F36;
     transition: .3s;
 }
 
-.form-search__close:hover svg {
+.form-search__close:hover svg,
+.modal-menu__close:hover svg {
     fill: #CDA274;
+}
+
+.modal-menu {
+    position: relative;
+}
+
+.modal-menu__nav {
+    font-size: 20px;
+    flex-direction: column;
+    column-gap: 25px;
+    align-items: center;
+}
+
+.modal-menu__item:hover {
+    color: #CDA274;
+}
+
+.modal-menu__link {
+    font-size: inherit;
+    text-decoration: none;
+    color: inherit;
+    transition: .3s;
+}
+
+.modal-menu__close {
+    position: absolute;
+    top: 55px;
+    right: 15px;
+    transform: translate(-50%, -50%);
 }
 
 .hero {
@@ -375,9 +422,20 @@ body {
 
 .about__img {
     flex-basis: 653px;
-    max-height: 700px;
+    height: 700px;
     border-radius: 0 35vh 0 15vh;
     overflow: hidden;
+    position: relative;
+}
+
+.about__img>img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
 }
 
 .swiper {}
@@ -389,20 +447,22 @@ body {
 .swiper-wrapper {}
 
 .feedback-swiper__slide {
-    padding-top: 88px;
-    padding-bottom: 183px;
+    padding: 88px 225px 183px;
+    box-sizing: border-box;
     background-color: #F4F0EC;
     border-radius: 70px;
 }
 
 .feedback-swiper__title {
-    max-width: 650px;
-    margin: 0 auto 90px;
+    /* max-width: 650px; */
+    /* margin: 0 auto 90px; */
+    margin-bottom: 90px;
 }
 
 .feedback-swiper__inner {
-    max-width: 750px;
-    margin: 0 auto;
+    /* max-width: 750px; */
+    /* margin: 0 auto; */
+    margin: 0;
 }
 
 .feedback-swiper__text {
@@ -1743,8 +1803,7 @@ body {
     }
 
     .feedback-swiper__slide {
-        padding-top: 65px;
-        padding-bottom: 125px;
+        padding: 65px 150px 125px;
     }
 
     .feedback-swiper__text {
@@ -1756,6 +1815,11 @@ body {
     .swiper-slide-next,
     .swiper-slide-prev {
         background-color: transparent;
+    }
+
+    .page {
+        padding-top: 120px;
+        padding-bottom: 120px;
     }
 
     .clients__list {
@@ -1784,9 +1848,235 @@ body {
     }
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     .container {
         max-width: 600px;
     }
 
-} */
+    .title-2 {
+        font-size: 30px;
+    }
+
+    .header {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .header__item+.header__item {
+        margin-left: 30px;
+    }
+
+    .header__search {
+        margin-left: 20px;
+    }
+
+    .header__link {
+        font-size: 18px;
+    }
+
+    .logo>img {
+        max-width: 150px;
+    }
+
+    .hero {
+        border-radius: 0 0 0 20vh;
+    }
+
+    .hero__title {
+        font-size: 60px;
+    }
+
+    .about {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .about>.container {
+        flex-direction: column;
+        column-gap: unset;
+        row-gap: 20px;
+        align-items: flex-start;
+    }
+
+    .about__img {
+        width: 100%;
+        height: 50vh;
+        flex-basis: auto;
+        border-radius: 0 25vh 0 10vh;
+    }
+
+    .about__info>.title-2 {
+        text-align: left;
+        margin-bottom: 20px;
+    }
+
+    .about__phone-number {
+        font-size: 20px;
+    }
+
+    .about__phone-img {
+        flex-basis: 68px;
+    }
+
+    .feedback-swiper__slide {
+        padding: 50px 75px 60px;
+    }
+
+    .feedback-swiper__title {
+        margin-bottom: 30px;
+    }
+
+    .feedback-swiper__text {
+        font-size: 22px;
+        padding-top: 40px;
+        margin-bottom: 10px;
+    }
+
+    .page {
+        padding-top: 75px;
+        padding-bottom: 75px;
+    }
+
+    .numbers__list {
+        flex-wrap: wrap;
+        row-gap: 10px;
+    }
+
+    .numbers__item {
+        flex-basis: 50%;
+    }
+
+    .numbers__item:nth-child(even):after {
+        display: none;
+    }
+
+    .numbers {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .article__list {
+        grid-template-columns: 1fr;
+    }
+
+    .article__item-thumb {
+        height: 250px;
+    }
+
+    .article__item-title {
+        text-align: left;
+    }
+
+    .contact-us {
+        padding-top: 100px;
+        padding-bottom: 55px;
+    }
+
+    .footer__inner {
+        grid-template-columns: 1fr;
+        column-gap: unset;
+        row-gap: 10px;
+    }
+
+    .footer__address {
+        text-align: right;
+    }
+}
+
+@media (max-width: 600px) {
+    .header>nav {
+        display: none;
+    }
+
+    .header__menu {
+        display: block;
+        margin-left: 20px;
+        width: 50px;
+        aspect-ratio: 1;
+        border-radius: 50%;
+        background-color: #F4F0EC;
+        position: relative;
+        border: none;
+        transition: .3s;
+    }
+
+    .header__menu::after {
+        content: '';
+        position: absolute;
+        display: block;
+        height: 2px;
+        width: 20px;
+        background-color: #000;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0px 6px 0px 0px #000, 0px -6px 0px 0px #000;
+        transition: .3s;
+    }
+
+    .header__menu:hover {
+        background-color: #cda274;
+        ;
+    }
+
+    .header__menu:hover::after {
+        background-color: #fff;
+        box-shadow: 0px 6px 0px 0px #fff, 0px -6px 0px 0px #fff;
+    }
+
+    .header__search {
+        margin-left: auto;
+    }
+
+    .contact-us__form {
+        grid-template-columns: 1fr;
+    }
+
+    .contact-us__form textarea,
+    .contact-us__btn {
+        grid-column: unset;
+    }
+
+}
+
+@media (max-width: 576px) {
+    .numbers__item {
+        flex-basis: 100%;
+    }
+
+    .numbers__item p {
+        margin-bottom: 20px;
+    }
+
+    .numbers__item::after {
+        content: '';
+        position: absolute;
+        display: block;
+        width: calc(100% - 20px);
+        height: 1px;
+        background-color: #cda274;
+        right: unset;
+        top: unset;
+        bottom: 0;
+        left: 20px;
+    }
+
+    .numbers__item:nth-child(even):after {
+        display: unset;
+    }
+
+    .numbers__item:last-child:after {
+        display: none;
+    }
+
+    .footer__wrapper {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .footer__address,
+    .footer__mail,
+    .footer__tel {
+        text-align: center;
+    }
+}
